objects/PRT_Contract__c.object
<CustomObject>
    <description>Capture details of the agreement between JLR and talent/ambassadors</description>
    <label>Advocate Contract</label>
    <nameField>
        <label>Contract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Advocate Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Advocate__c</fullName>
        <label>Advocate</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You must only select a brand advocate record</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Brand Advocate</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>PRT_Contracts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <description>Number of months duration of the Contract</description>
        <label>Duration (Months)</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Date from which the contract commences</description>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <formula>DATE( 
    YEAR( Start_Date__c ) + FLOOR( ( MONTH ( Start_Date__c -1 ) + Duration__c - 1 ) / 12) - IF(MONTH(Start_Date__c)=1,1,0), 

    MOD( MONTH ( Start_Date__c - 1 ) + Duration__c - 1 , 12 )+ 1,  

    IF( DAY( Start_Date__c - 1) &gt; CASE( MOD( MONTH( Start_Date__c - 1) + Duration__c - 1, 12 ) + 1, 
    2, IF(MOD(YEAR( Start_Date__c ) + FLOOR( ( MONTH ( Start_Date__c -1 ) + Duration__c - 1 ) / 12) - IF(MONTH(Start_Date__c)=1,1,0),4)&gt;0,28,29), 
    4, 30, 
    6, 30, 
    9, 30, 
    11, 30, 
    31 ), 
    CASE( MOD( MONTH( Start_Date__c - 1) + Duration__c - 1, 12 ) + 1, 
    2, IF(MOD(YEAR( Start_Date__c ) + FLOOR( ( MONTH ( Start_Date__c -1 ) + Duration__c - 1 ) / 12) - IF(MONTH(Start_Date__c)=1,1,0),4)&gt;0,28,29),
    4, 30, 
    6, 30, 
    9, 30, 
    11, 30, 
    31 ) 
    , DAY( Start_Date__c - 1) 
    ) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Used_Appearances__c</fullName>
        <label>Used Appearances</label>
        <summarizedField>PRT_Obligation__c.Quantity_Used__c</summarizedField>
        <summaryFilterItems>
            <field>PRT_Obligation__c.Type__c</field>
            <operation>equals</operation>
            <value>Personal Appearance (Day), Personal Appearance (Time Restricted)</value>
        </summaryFilterItems>
        <summaryForeignKey>PRT_Obligation__c.Contract__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Unique_Contract_Name__c</fullName>
        <description>SYSTEM Field. Used to test for unique contract name for this advocate. Workflow populated.</description>
        <label>Unique Contract Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Appearances__c</fullName>
        <label>Number of Appearances</label>
        <summarizedField>PRT_Obligation__c.Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>PRT_Obligation__c.Type__c</field>
            <operation>equals</operation>
            <value>Personal Appearance (Day), Personal Appearance (Time Restricted)</value>
        </summaryFilterItems>
        <summaryForeignKey>PRT_Obligation__c.Contract__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Remaining_Appearances__c</fullName>
        <label>Remaining Appearances</label>
        <summarizedField>PRT_Obligation__c.Quantity_Remaining__c</summarizedField>
        <summaryFilterItems>
            <field>PRT_Obligation__c.Type__c</field>
            <operation>equals</operation>
            <value>Personal Appearance (Day), Personal Appearance (Time Restricted)</value>
        </summaryFilterItems>
        <summaryForeignKey>PRT_Obligation__c.Contract__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <validationRules>
        <fullName>Length_in_Range_1_60</fullName>
        <active>true</active>
        <description>Contract length must be &gt; 0 and &lt;=60</description>
        <errorConditionFormula>OR(Duration__c &lt; 1,Duration__c &gt; 60)</errorConditionFormula>
        <errorDisplayField>Duration__c</errorDisplayField>
        <errorMessage>Contract length must be &gt; 0 and &lt;=60 months</errorMessage>
    </validationRules>
</CustomObject>